--- a/fastlane/jetpack_metadata/he/release_notes.txt
+++ b/fastlane/jetpack_metadata/he/release_notes.txt
@@ -1,3 +1,7 @@
-- עדכונים בבלוק ההטמעה: הפעלנו תצוגה מקדימה של תוכן מוטמע מ-WordPress ותוכן מוטמע מאינסטגרם ומ-Vimeo. בסוגי מדיה מסוימים אפשר להטמיע בהצלחה כתובות URL, אבל לא ניתן להציג תצוגה מקדימה שלהם. במקרים האלה, תופיע ההודעה 'תצוגה מקדימה לא זמינה'. כאשר אין אפשרות להטמיע מדיה, תופיע האפשרות 'לנסות שוב' כדי להטמיע שנית את התוכן ואפשרות חלופית להמיר את הקישור.
+עכשיו פשוט יותר לעבוד עם עורך הבלוקים! הוספנו בלוקים ייעודיים להטמעה ל-YouTube, לטוויטר, ל-WordPress ול-Vimeo ובעזרתם אפשר להוסיף מדיה במהירות שיא – אפשר למצוא אותם בתצוגה של בוחר הבלוקים. אפשר אפילו לערוך כתובות URL לאחר שבחרת בהן.
 
-- שיפורים ותיקונים שונים: שיפרנו את התצוגה של התפריט 'האתר שלי' ושינינו את 'פוסטים בבלוג' ל'פוסטים' ואת 'העמודים באתר' ל'עמודים'. (השינויים האלה לא ישפיעו על הפוסטים והעמודים שלך – מבטיחים!) בנוסף, תיקנו באג שמנע ממעקב אחר שיחה באמצעות האימייל דרך התגובות על הפוסט.
+תיקנו בעיה עם בלוק הגלריה ועכשיו התמונות עדיין יוספו אם סגרת את הפוסט בזמן ההעלאה.
+
+עם זאת, אם עדיין קיימת אצלך בעיה, עכשיו קל יותר לבקש עזרה. אפשר לעשות זאת ישירות מתוך המסך של העורך: יש להקיש על כפתור התפריט של שלוש הנקודות, לבחור באפשרות 'עזרה ותמיכה' ולאחר מכן 'ליצור קשר עם התמיכה'.
+
+אחרון חביב: תיקנו בעיה שלפעמים גרמה למסך ההתראות להציג תמונת פרופיל שגויה כאשר קיבלת אזכורים בתגובות – כעת התמונה שבחרת תוצג לתפארת!
