--- a/fastlane/jetpack_metadata/ru/release_notes.txt
+++ b/fastlane/jetpack_metadata/ru/release_notes.txt
@@ -1,3 +1,7 @@
-— Обновление блока "Вставка". Добавлена функция предварительного просмотра внедрённых объектов WordPress, а также возможность вставки содержимого из Instagram и Vimeo. Для некоторых типов медиафайлов можно вставить URL-адрес, но нельзя выполнить предварительный просмотр содержимого. В этом случае отображается сообщение "Предварительный просмотр недоступен". Если не удаётся вставить медиафайл, появится опция "Повторить" для повторной вставки и другая опция для преобразования в ссылку.
+Редактор блоков упростит вашу работу! Специальные блоки вставки для YouTube, Twitter, WordPress и Vimeo позволяют быстро добавлять контент. Они доступны в режиме выбора блоков. Выбрав URL-адрес, его можно изменить.
 
-— Улучшения и исправления. Улучшена работа меню "Мой сайт": название раздела "Записи в блоге" заменено на "Записи", а "Страницы сайта" — на "Страницы". (Не бойтесь, это не повлияет на содержимое записей и страниц.) Также исправлена ошибка, из-за которой не удавалось вести переписку по почте через комментарии к записи.
+Проблема с блоком галереи устранена. Запись можно закрыть, но изображения продолжат добавляться.
+
+Стало проще запрашивать помощь. На экране редактора можно открыть меню с тремя точками и выбрать "Помощь и техническая поддержка", затем "Обратиться в службу поддержки".
+
+Устранена ошибка, в результате которой на экране уведомлений показывался неправильный аватар, если вас упомянули в комментарии.
