--- a/fastlane/jetpack_metadata/id/release_notes.txt
+++ b/fastlane/jetpack_metadata/id/release_notes.txt
@@ -1,3 +1,7 @@
-- Pembaruan blok sematan: Kami telah mengaktifkan pratinjau sematan WordPress, serta sematan untuk konten Instagram dan Vimeo.  Untuk beberapa media, Anda mungkin berhasil menyematkan URL tetapi tidak dapat melihat pratinjau konten; dalam hal ini, Anda akan melihat pesan “Pratinjau tidak tersedia”. Jika Anda tidak dapat menyematkan media, Anda akan melihat pilihan "Coba lagi" untuk menyematkan konten kembali, dan pilihan alternatif untuk mengonversinya menjadi tautan.
+Kami telah mempermudah penggunaan editor Blok! Ada blok sematan khusus untuk YouTube, Twitter, WordPress, dan Vimeo, yang mempercepat penambahan media — Anda bisa menemukannya di tampilan pemilih blok. URL bahkan dapat disunting setelah Anda menentukannya.
 
-- Berbagai peningkatan dan perbaikan: Kami telah menyederhanakan menu Situs Saya dengan mengubah “Pos Blog” menjadi “Pos” dan “Halaman Situs” menjadi “Halaman”. (Penyederhanaan ini tidak memengaruhi konten pos dan halaman Anda—percayalah!) Kami juga memperbaiki bug yang menghambat Anda mengikuti percakapan via email melalui komentar pos.
+Kami telah memperbaiki masalah pada blok galeri sehingga sekarang gambar tetap akan ditambahkan meski Anda menutup pos setelah melakukan pengunggahan. 
+
+Namun, jika masih mengalami masalah, mintalah bantuan untuk lebih memudahkan hidup Anda. Anda dapat meminta bantuan langsung dari layar editor: Cukup ketuk tombol menu 3 titik, pilih "Bantuan & Dukungan", lalu "Hubungi Dukungan."
+
+Terakhir, kami telah memperbaiki masalah terkait layar pemberitahuan yang terkadang menampilkan avatar yang salah saat Anda disebutkan di komentar — sekarang gambar yang Anda pilih akan ditampilkan dengan benar!
