--- a/fastlane/jetpack_metadata/ja/release_notes.txt
+++ b/fastlane/jetpack_metadata/ja/release_notes.txt
@@ -1,3 +1,7 @@
-- 埋め込みブロックの更新: WordPress の埋め込みのプレビュー、および Instagram コンテンツ と Vimeo コンテンツの埋め込みができるようになりました。 一部のメディアでは問題なく URL を埋め込めるものの、コンテンツをプレビューできない場合があります。このような場合、「利用できるプレビューがありません」というメッセージが表示されます。 メディアを埋め込めない場合、コンテンツを再度埋め込むための「リトライ」オプション、および代わりにリンクに変換するための代替オプションが表示されるようになっています。
+ブロックエディターが使いやすくなりました。 YouTube、Twitter、WordPress、Vimeo 専用の埋め込みブロックが追加され、メディアを非常にすばやく追加できるようになりました。埋め込みブロックはブロック選択画面で見つけることができます。 URL は選択後でも編集できます。
 
-- さまざまな機能改善と修正: 「参加サイト」メニューを整理し、「ブログの投稿」を「投稿」に、「サイトページ」を「ページ」に変更しました。 (こちらは投稿とページ コンテンツには影響していません) 投稿のコメントを通じてメールで会話をフォローできないバグも修正しました。
+また、ギャラリーブロックの問題を修正し、画像のアップロード中に投稿を閉じても画像を追加できるようになりました。
+
+引き続き問題が生じる場合はお問い合わせください。 エディター画面でドットが3つ並んだメニューボタンをタップし、「ヘルプ & サポート」、「サポートに問い合わせる」の順に選択するとお問い合わせいただけます。
+
+さらに、コメントにメンションが届いた際に通知画面に誤ったアバターが表示される問題を修正し、選択した画像が正常に表示されるようになりました。
