--- a/fastlane/jetpack_metadata/ko/release_notes.txt
+++ b/fastlane/jetpack_metadata/ko/release_notes.txt
@@ -1,3 +1,7 @@
-- 임베드 블록 업데이트: WordPress 미리보기는 물론 Instagram 및 Vimeo 콘텐츠용 임베드도 활성화했습니다. 일부 미디어에서는 URL은 임베드할 수 있지만 콘텐츠는 미리 볼 수 없습니다. 이러한 경우에는 "사용 가능한 미리보기 없음"이라는 메시지가 표시됩니다. 미디어를 임베드할 수 없는 경우 이제는 다시 콘텐츠를 임베드하는 "다시 시도" 옵션과 그 대신에 콘텐츠를 링크로 변환하는 대체 옵션이 표시됩니다.
+블록 편집기를 사용하면 작업이 쉬워집니다! 미디어를 아주 빠르게 추가할 수 있는 유튜브, Twitter, 워드프레스 및 Vimeo 전용 임베드 블록이 있습니다. 블록 선택기 보기에서 해당 블록을 찾을 수 있습니다. URL을 선택한 후 편집할 수도 있습니다.
 
-- 다양한 개선 사항 및 수정 사항: "블로그 글"은 "글"로 변경하고 "사이트 페이지"는 "페이지" 변경하여 내 사이트 메뉴를 간소화했습니다. (글과 페이지 콘텐츠는 영향을 받지 않습니다. 약속합니다!) 글의 댓글을 통해 이메일로 대화를 팔로우하지 못하는 버그도 수정했습니다.
+갤러리 블록 관련 문제를 해결했으므로 이제는 이미지가 업로드되는 동안 글을 닫아도 해당 이미지가 추가됩니다.
+
+그래도 문제가 계속 발생하는 경우 더욱더 쉽게 도움을 요청할 수 있습니다. 편집기 화면 안에서 바로 진행할 수 있습니다. 점 3개 메뉴 버튼만 누르고 "도움 및 지원"과 "지원팀에 문의"를 차례로 선택하면 됩니다.
+
+마지막으로, 댓글에서 회원님이 언급될 때 가끔 잘못된 아바타가 표시되는 문제를 해결했습니다. 이제는 회원님이 선택한 이미지가 자랑스럽게 표시됩니다.
