--- a/WordPress/Resources/ar.lproj/Localizable.strings
+++ b/WordPress/Resources/ar.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-10-16 22:51:32+0000 */
+/* Translation-Revision-Date: 2021-10-19 07:18:38+0000 */
 /* Plural-Forms: nplurals=6; plural=(n == 0) ? 0 : ((n == 1) ? 1 : ((n == 2) ? 2 : ((n % 100 >= 3 && n % 100 <= 10) ? 3 : ((n % 100 >= 11 && n % 100 <= 99) ? 4 : 5)))); */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: ar */
@@ -2278,7 +2278,7 @@ translators: Block name. %s: The localized block name */
 "Domains" = "النطاقات";
 
 /* Description for the first domain purchased with a free plan. */
-"Domains purchased on this site will redirect users to " = "ستعيد النطاقات التي تم شراؤها على هذا الموقع المستخدمين إلى ";
+"Domains purchased on this site will redirect users to " = "النطاقات التي تم شراؤها على هذا الموقع ستعيد توجيه الزائرين إلى ";
 
 /* Label for button to log in using your site address. The underscores _..._ denote underline */
 "Don't have an account? _Sign up_" = "ليس لديك حساب؟ _تسجيل_";
